add reset after submission

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     </form> -->
 
     <!-- https://designsystem.digital.gov/components/form-templates/ -->
-    <form class="usa-form" onSubmit="App.createTask(); return false;">
+    <form class="usa-form" onSubmit="App.createTask(); App.reset(); return false;">
 
       <!-- Name -->
       <fieldset class="usa-fieldset">
