--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     <!-- SSN -->
     <fieldset class="usa-fieldset">
       <legend class="usa-legend">Social Security Number</legend>
-      <input class="usa-input" id="ssn" name="ssn" type="text" placeholder="000 00 0000" required pattern="\d{3}-?\d{2}-?\d{4}" aria-required="true">
+      <input class="usa-input" id="ssn" name="ssn" type="text" placeholder="000 00 0000" required pattern="\d{3} ?\d{2} ?\d{4}" aria-required="true">
     </fieldset>
 
     <!-- Address -->
